update request endpoints
